Change PDF link and remove commented text
Updated button link to point to the new PDF document.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             background: white;
             padding: 40px;
             border-radius: 12px;
-            /* 「誤りはありますか」を削除しました */
             box-shadow: 0 4px 15px rgba(0,0,0,0.1);
             display: inline-block;
         }
@@ -28,10 +27,10 @@
             border-radius: 8px;
             font-weight: bold;
             font-size: 20px;
-            transition: background-color 0.3s; /* ホバー時の動きを追加 */
+            transition: background-color 0.3s;
         }
         .btn:hover {
-            background-color: #0056b3; /* マウスを乗せた時に色を濃くする */
+            background-color: #0056b3;
         }
     </style>
 </head>
@@ -39,7 +38,7 @@
     <div class="container">
         <h1>太極拳論解説　佐藤先生</h1>
         <p>下のボタンをクリックすると資料が確認できます。</p>
-        <a href="kanko_obusemati_01.pdf" class="btn" target="_blank" rel="noopener noreferrer">PDF資料を開く</a>
+        <a href="太極論_佐藤先生2.pdf" class="btn" target="_blank" rel="noopener noreferrer">PDF資料を開く</a>
     </div>
 </body>
 </html>
