--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container">
         <h1>太極拳論解説　佐藤先生</h1>
         <p>下のボタンをクリックすると資料が確認できます。</p>
-        <a href="tai_Sato.pdf" class="btn" target="_blank" rel="noopener noreferrer">PDF資料を開く</a>
+        <a href="tai_sato.pdf" class="btn" target="_blank" rel="noopener noreferrer">PDF資料を開く</a>
     </div>
 </body>
 </html>
